# Algorithmen_und_Datenstrukturenn

./: CMakeLists.txt  README.md
Exercise3/Exercise_Sheet_3_1/: main.cpp
Exercise3/Exercise_Sheet_3_2/: CMakeLists.txt  edge.cpp  edge.h  extendedGraph2.h
Exercise3/Exercise_Sheet_3_3/: CMakeLists.txt  main.cpp
Exercise4/Exercixe_Sheet_4_1/: Ware.cpp  hashTableChaining.cpp  main.cpp  makefile  pbEntry.cpp
Exercise5/Beispielcode/: main.cpp  makefile
Exercise5/Exercise_Sheet_5_1/: Makefile  graph.cpp  graph.h  main.cpp
Exercise5/Exercise_Sheet_5_2/: backpack.cpp  backpack.h  drone.cpp  drone.h  item.cpp  item.h  main.cpp  makefile
Exercise_1/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  Makefile  Sortiment.cpp  Sortiment.h  Ware.cpp  Ware.h  bubbleSort_commented.cpp  insertionSort_commented.cpp  main.cpp  mergeSort_commented.cpp
Exercise_2/: HelperFunktions.cpp  HelperFunktions.h
Exercise_2/Exercise_2_1/: binaryTree.cpp  binaryTree.h  binaryTreeNode.cpp  binaryTreeNode.h  main.cpp
Exercise_2/Exercise_2_2/: CMakeLists.txt  doublyLinkedList.cpp  doublyLinkedList.h  extendedListItem.cpp  extendedListItem.h  main.cpp  makefile
Exercise_2/Exercise_2_3/: CMakeLists.txt  extendedAvlTree.cpp  extendedAvlTree.h  main.cpp  makefile
Exercise_3/Exercise_Sheet_3_2/: extendedGraph2.cpp  main.cpp
Exercise_3/Exercise_Sheet_3_3/: graph.cpp  makefile
Exercise_4/BeispielCode/: hashTable.h
Exercise_4/Exercixe_Sheet_4_1/: CMakeLists.txt  Ware.h  hashTableChaining.h
Exercise_4/Exercixe_Sheet_4_2/: CMakeLists.txt  hashTableDynamic.cpp  hashTableDynamic.h  main.cpp  (+2 more)
(+20 files in other folders)
