cmake_minimum_required(VERSION 3.21)
project(Exercixe_Sheet_4_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Exercixe_Sheet_4_1 C:/Users/McRebel/Dropbox/MCI/Algorithmen_und_Datenstrukturen/Exercixe4/Exercixe_Sheet_4_1/main.cpp
        hashTableChaining.cpp
        pbEntry.cpp
        Ware.cpp
        )
